@@ -12,9 +12,13 @@
 </head>
 <h1>v 1.2.7&nbsp;&nbsp;&nbsp;&nbsp; Jan 24, 2026</h1>
 <h2>Risk Summary</h2>
-<p>Frequency Response tests hav</p>
-<p>&nbsp;</p>
-<h1>&nbsp;</h1>
+<p>This release is almost all just bug repairs so pretty low risk. The relay timing change might be problematic.</p>
+<h2>Add Blackman-Harris-7 Window</h2>
+<p>Blackman-Harris 7 is a nice windowing scheme so it&#39;s now available (Blackman-7).</p>
+<h2>Repair renaming files</h2>
+<p>With the switch to .ZIP file format (instead of gzip) a bug was introduced causing load to fail if the file was renamed. That has been repaired.</p>
+<h2>Reduce relay time</h2>
+<p>Continuing to try to get ultra-stable results while spending as little time waiting as possible a few empirical tests were done and some relay wait times were decreased by a second+.</p>
 <h5>__________________________________________________________________________________________________________</h5>
 <h5>__________________________________________________________________________________________________________</h5>
 <h1>&nbsp;</h1>
