@@ -7,6 +7,8 @@ v 1.2.7 asdfasdf
 - add blackman-harris 7 window to the window list, rename blackman to blackman-3
 - repaired: renamed files could not be loaded with the new Zip code
 - fix Response plots color not updating when changing palette colors
+- hook up second Y axis settings for group delay
+- reduce the relay delay time after empirical testing
 v 1.2.6 1/24/26
 - add a QA40x readme on ports
 - read the dc supply voltage, dc current, and temperature on device init
